<resources>
    <string name="app_name">DeliveryApp</string>
    <string name="user_id">아이디</string>
    <string name="user_password">비밀번호</string>
    <string name="background_image">배경 이미지</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="or">또는</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="email_suffix">delivery.com</string>
    <string name="user_name">이름</string>
    <string name="user_phone">전화번호</string>
    <string name="privacy_agreement">개인정보이용 동의</string>
    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="my">My</string>
    <string name="order_list">주문내역</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="korean_food">한식</string>
    <string name="western_food">양식</string>
    <string name="japanese_food">일식</string>
    <string name="chinese_food">중식</string>
    <string name="flour_food">분식</string>
    <string name="snack">간식</string>
    <string name="chicken">치킨</string>
    <string name="local_image">음식점 이미지</string>
    <string name="menu_not_prepared">메뉴를 준비중인 음식점입니다</string>
    <string name="total_price_is">총 금액</string>
    <string name="unit_price">원</string>
    <string name="do_order">주문하기</string>
    <string name="local_name">업소명</string>
    <string name="address">주소지</string>
    <string name="order_customer">주문하시는 분</string>
    <string name="order_address">배달 주소지</string>
    <string name="balance">잔고</string>
    <string name="do_charge">충전하기</string>
    <string name="current_address">현재 주소지</string>
    <string name="do_change">변경하기</string>
    <string name="current_balance">현재 잔액</string>
    <string name="sign_out">로그아웃</string>
    <string name="no_orders_yet">아직 주문 내역이 없습니다</string>
    <string name="amount_of_money">금액(원)</string>
    <string name="virus_info">감염병 정보</string>
    <string name="social_distancing_policy">지역별 거리두기 현황</string>
</resources>