<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/pizza"
        android:contentDescription="@string/background_image"
        android:alpha="0.3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingTop="40dp"
        android:paddingEnd="40dp">

        <EditText
            android:id="@+id/editUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_box"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:hint="@string/user_id"
            android:inputType="text"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_box"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/user_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editUserPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_box"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:hint="@string/password_confirm"
            android:layout_marginBottom="20dp"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_box"
            android:drawableStart="@drawable/ic_name"
            android:drawablePadding="8dp"
            android:hint="@string/user_name"
            android:inputType="text"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/editUserPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_box"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="8dp"
            android:hint="@string/user_phone"
            android:inputType="phone"
            tools:ignore="Autofill" />

        <CheckBox
            android:id="@+id/checkPrivacyAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_agreement"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:backgroundTint="#555"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#222"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

    </LinearLayout>

</FrameLayout>