<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".OrderActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/pizza" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:background="@color/colorPrimaryDark"
            android:elevation="4dp"
            android:paddingStart="16dp"
            android:paddingTop="14dp"
            android:paddingEnd="16dp"
            android:paddingBottom="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:drawablePadding="8dp"
                android:text="@string/do_order"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_bike"
                tools:ignore="HardcodedText" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/colorPrimaryLight"
                app:cardCornerRadius="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/layoutOrder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <!-- 업소명 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:text="@string/local_name"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txtLocalName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#555"
                                tools:ignore="HardcodedText" />

                        </LinearLayout>

                        <!-- 업소주소 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:text="@string/address"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txtLocalAddress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#555"
                                tools:ignore="HardcodedText" />

                        </LinearLayout>

                        <!-- 주문하시는 분 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:text="@string/order_customer"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txtUserName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#555"
                                tools:ignore="HardcodedText" />

                        </LinearLayout>

                        <!-- 배달 주소 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:text="@string/order_address"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txtOrderAddress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#555"
                                tools:ignore="HardcodedText" />

                        </LinearLayout>

                        <!-- 주문내역 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:text="@string/order_list"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txtOrderList"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#555"
                                tools:ignore="HardcodedText" />

                        </LinearLayout>

                        <!-- 주문내역 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:text="@string/total_price_is"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txtTotalPrice"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#555"
                                android:textStyle="bold"
                                tools:ignore="HardcodedText" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/unit_price"
                                android:textColor="#555"
                                tools:ignore="HardcodedText" />

                        </LinearLayout>

                        <!-- 잔고 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:text="@string/balance"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txtBalance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#555"
                                android:textStyle="bold"
                                tools:ignore="HardcodedText" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/unit_price"
                                android:textColor="#555"
                                tools:ignore="HardcodedText" />

                        </LinearLayout>

                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/progressOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="#555"
                android:text="@string/do_order" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>